--- a/config/module.ini
+++ b/config/module.ini
@@ -1,5 +1,5 @@
 [info]
-name         = "Exhibits List"
+name         = "Exhibit List"
 version      = "1.0"
 author       = "Corey Tegeler"
 configurable = false
